--- a/style/style.css
+++ b/style/style.css
@@ -112,7 +112,7 @@ border-bottom:3px solid #1c943f ;
  padding: 24px 0 15px;
  text-align: center;
  border-bottom: 2px solid #ffffff;
- margin-bottom: 30px;
+ margin-bottom: 15px;
  margin-top: 0;
 }
 
@@ -129,7 +129,7 @@ border-bottom:3px solid #1c943f ;
  font-size: 1.5em;
 }
 .Rapido-borde{
- margin: 16px 0;
+ margin:0 0 16px;
 }
 
 /* --------------------------------------extra-------------------------------------- */
